package diagramme;
/**
 * interface Observateur
 */
public interface Observateur {
    public void actualiser(Sujet s);
}
